--- a/temp.yaml
+++ b/temp.yaml
@@ -48,7 +48,7 @@ spec:
   - name: demo-client2
     image: alpine
     command: ["/bin/sh"]
-    args: ["-c", "echo 'GET / HTTP/1.1\r\n\r\n' | nc service-demo 80"]
+    args: ["-c", "echo 'GET / HTTP/1.1\r\n\r\n' | nc back-end 80"]
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
